version/derive/tests/ui_fail/field_missing_in_version_attribute.stderr
error: Missing field `n`
 --> tests/ui_fail/field_missing_in_version_attribute.rs:7:1
  |
7 | #[version(versioned = "VersionedMessage")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `version` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0412]: cannot find type `_VersionedMessageV1` in this scope
 --> tests/ui_fail/field_missing_in_version_attribute.rs:5:1
  |
5 | declare_versioned!(VersionedMessage 1..2);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
  |
  = note: this error originates in the macro `declare_versioned` (in Nightly builds, run with -Z macro-backtrace for more info)
